--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,16 @@ on:
       - main
       - source
       - dev
+env:
+  MONGODB_DB_NAME: gha-demo
 jobs:
   test:
     environment: testing
+    env:
+      MONGODB_CLUSTER_ADDRESS: cluster0.uaqxpql.mongodb.net
+      MONGODB_USERNAME: sujebi
+      MONGODB_PASSWORD: nnIGUsLrZefcmMjQ
+      PORT: 8080
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
@@ -20,15 +27,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Run server
-        run: npm start & npx wait-on http://127.0.0.1:XYZ
+        run: npm start & npx wait-on http://127.0.0.1:$PORT
       - name: Run tests
         run: npm test
       - name: Output information
-        run: echo "..."
+        run: echo "MONGODB_USERNAME: ${{env.MONGODB_USERNAME}}"
   deploy:
     needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Output information
-        run: |        
-          echo "..."
+        run: |
+           echo "MONGODB_USERNAME: ${{env.MONGODB_USERNAME}}"
+           echo "MONGOD_DB_NAME: $MONGO_DB_NAME"
